--- a/Task1/Style.css
+++ b/Task1/Style.css
@@ -5,3 +5,11 @@ h1 {color: rgb(0, 0, 255);}
     justify-content: flex-end;
 }
 .personal_data {
+    border: 1px solid black;
+}
+.student_data {
+    border: 1px solid black;
+}
+.skill_data {
+    border: 1px solid black;
+}
