--- a/Task1/Style.css
+++ b/Task1/Style.css
@@ -1,11 +1,30 @@
-h1 {color: rgb(0, 0, 255);}
-.flex-container {
+.flex-container-main {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-between;
 }
+.flex-container-1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+.flex-container-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: stretch;
+}
+.flex-item {
+    padding: 12px;
+    font: 12 12px "Times-New-Roman", sans-serif;
+    color: black;
+    text-align: center;
+    flex-grow: 1;
+  }
 .personal_data {
     border: 1px solid black;
+    flex-direction: row;
+    align-self: stretch;
 }
 .student_data {
     border: 1px solid black;
