--- a/Task1/Style.css
+++ b/Task1/Style.css
@@ -6,7 +6,7 @@
 .flex-container-submain {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: stretch;
 }
 .flex-container-Test {
@@ -29,14 +29,14 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: stretch;
-    width: 50%;
+    width: 25%;
 }
 .flex-container-2 {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: stretch;
-    width: 50%;
+    width: 75%;
 }
 .flex-container-3 {
     display: flex;
@@ -67,4 +67,10 @@
 }
 .Hobbies_data {
     border: 1px solid black;
+}
+.flex-Item-Right {
+    width: 50%;
+}
+.flex-Item-Left {
+    width: 50%;
 }
